refactor: Major Architecture v0.2.0 - NeurIPS preparation
🏗️ Structural Reorganization:
- strategies/ → inventory/ with agent-specific subdirs (analyst/, researcher/, trader/, risk/)
- models/types.py → models.py (flattened)
- orchestrator/graph.py → workflow.py with WorkflowEngine class
- learning/ → optimization/ with KnowledgeTransfer and InventoryPruner
- tools/ → utils/, config.py + compose.py → config/ module

✨ New Features:
- Plugin-based inventory system with @register decorator
- Lazy-loading package imports
- Complete Risk Manager (hard_fail/soft_fail/pass)
- Liquidation price calculation
- Performance tracking (Sharpe, PnL, HitRate, MaxDD, CalibECE)
- Knowledge transfer mechanism (every K rounds)
- Inventory pruning (every M rounds)

🤖 Agent Implementations:
- Analyst: TALibStack, STL, GaussianHMM, KalmanFilter
- Researcher: ARIMAX, TFT, Bootstrap, QuantileReg, Calibration
- Trader: AggressiveMarket, PassiveLadderedLimit + LLM
- Risk: VaR, Leverage, Liquidation, Margin, GlobalVaR checks
- Evaluator: PerformanceTracker with metrics

📝 Updated README with NeurIPS 2026 roadmap

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,12 @@ dependencies = [
     "python-dotenv",
     "openai",
     "beautifulsoup4",
+    "backtrader",
 ]
 
 [tool.setuptools.packages.find]
-where = ["src"]
+where = ["."]
+include = ["trading_agents*", "data_pipeline*"]
 
 [build-system]
 requires = ["setuptools", "wheel"]
