--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,5 +1,4 @@
-# BTC 4-hour trading configuration (short-term backtesting)
-# Uses offline data for faster iteration
+# Default configuration for Multi-Agent Trading System
 
 symbol: "BTCUSD.PERP"
 timeframe: "4h"
@@ -7,10 +6,10 @@ timeframe: "4h"
 data:
   exchange_id: "kraken"
   timeframe: "4h"
-  max_days: 30
+  max_days: 730
   out_dir: "data"
-  offline_prices_csv: "data/prices_BTC-USD_4h.csv"
-  offline_news_jsonl: "data/news.jsonl"
+  # offline_prices_csv: "data/btc_4h.csv"
+  # offline_news_jsonl: "data/news.jsonl"
 
 news:
   use_llm_news: true
@@ -20,13 +19,16 @@ news:
   max_news_per_stream: 10
   max_search_results_per_stream: 50
   require_published_signal: true
-  max_lookback_days: 14
-  default_lookback_days: 7
+  max_lookback_days: 30
+  default_lookback_days: 14
 
 learning:
   knowledge_transfer_frequency: 10
   trader_transfer_frequency: 20
   pruning_frequency: 50
+  transfer_ratio: 0.5
+  min_usage_threshold: 5
+  min_success_rate: 0.3
 
 agents:
   analyst:
@@ -44,17 +46,23 @@ agents:
     inventory:
       researcher.forecasting:
         - arima_x
+        - tft
       researcher.uncertainty:
         - bootstrap_ensemble
+        - quantile_regression
       researcher.calibration:
         - temperature_scaling
+        - conformal_icp
 
   trader:
     id: "T1"
     use_llm: true
+    llm_model: "gpt-4o-mini"
+    log_thoughts: true
     inventory:
       trader.styles:
         - aggressive_market
+        - passive_laddered_limit
 
   risk:
     id: "M1"
@@ -62,6 +70,8 @@ agents:
       risk.checks:
         - var_safe_band
         - leverage_position_limits
+        - liquidation_safety
+        - margin_call_risk
 
   evaluator:
     id: "E1"
