--- a/configs/multi_asset.yaml
+++ b/configs/multi_asset.yaml
@@ -1,33 +1,43 @@
+# =============================================================================
 # Multi-Asset Configuration for 5-Coin Trading
-# Uses Bybit CSV data with cross-asset features
+# =============================================================================
+# Uses Bybit perpetual futures data with cross-asset market context features.
+# Trades: BTC, ETH, SOL, DOGE, XRP
+# =============================================================================
 
-symbol: "MULTI"  # Placeholder - actual symbols defined below
+symbol: "MULTI"
 timeframe: "4h"
 
 data:
-  exchange_id: "bybit"  # Reference only
+  exchange_id: "bybit"
   timeframe: "4h"
-  max_days: 730
+  max_days: 730  # 2 years of data
   out_dir: "data/multi_asset"
 
-  # Enable multi-asset mode
+  # ========================
+  # Multi-Asset Mode
+  # ========================
   multi_asset: true
   symbols:
-    - "BTC"
-    - "ETH"
-    - "SOL"
-    - "DOGE"
-    - "XRP"
+    - "BTC"   # Bitcoin
+    - "ETH"   # Ethereum
+    - "SOL"   # Solana
+    - "DOGE"  # Dogecoin
+    - "XRP"   # Ripple
 
-  # Path to Bybit CSV directory (update this path)
-  bybit_csv_dir: "/Users/yuhaoli/code/MAS_For_Finance/ML_Final_Project/Bybit_CSV_Data"
+  # Path to Bybit CSV data directory
+  # Update this to your local path or use relative path
+  bybit_csv_dir: "data/bybit"
 
-  # Generate cross-asset market context features
+  # Generate cross-asset market context features:
+  # - btc_dominance, altcoin_momentum, eth_btc_ratio
+  # - cross_oi_delta, aggregate_funding, risk_on_off
+  # - market_volatility, cross_correlation
   add_cross_features: true
 
 news:
   use_llm_news: true
-  news_query: "crypto OR bitcoin OR ethereum OR solana"
+  news_query: "crypto OR bitcoin OR ethereum OR solana OR dogecoin OR ripple"
   search_provider: "serpapi"
   llm_model: "gpt-4o-mini"
   max_news_per_stream: 15
@@ -37,12 +47,12 @@ news:
   default_lookback_days: 14
 
 learning:
-  knowledge_transfer_frequency: 10
-  trader_transfer_frequency: 20
-  pruning_frequency: 50
-  transfer_ratio: 0.5
-  min_usage_threshold: 5
-  min_success_rate: 0.3
+  knowledge_transfer_frequency: 10   # Transfer knowledge every K rounds
+  trader_transfer_frequency: 20      # Trader-specific transfer every 2K
+  pruning_frequency: 50              # Prune unused methods every M rounds
+  transfer_ratio: 0.5                # Transfer to bottom 50%
+  min_usage_threshold: 5             # Min uses before pruning eligible
+  min_success_rate: 0.3              # Min success rate to keep
 
 agents:
   analyst:
