--- a/configs/single/eth.yaml
+++ b/configs/single/eth.yaml
@@ -1,27 +1,25 @@
-# BTC 4-hour trading configuration (short-term backtesting)
-# Uses offline data for faster iteration
+# =============================================================================
+# ETH Single-Asset Configuration
+# =============================================================================
 
-symbol: "BTCUSD.PERP"
+symbol: "ETHUSD.PERP"
 timeframe: "4h"
 
 data:
-  exchange_id: "kraken"
+  exchange_id: "bybit"
   timeframe: "4h"
-  max_days: 30
-  out_dir: "data"
-  offline_prices_csv: "data/prices_BTC-USD_4h.csv"
-  offline_news_jsonl: "data/news.jsonl"
+  max_days: 730
+  out_dir: "data/single/eth"
+  
+  multi_asset: false
+  offline_prices_csv: "data/bybit/Bybit_ETH.csv"
 
 news:
   use_llm_news: true
-  news_query: "bitcoin OR BTC"
+  news_query: "ethereum OR ETH"
   search_provider: "serpapi"
   llm_model: "gpt-4o-mini"
   max_news_per_stream: 10
-  max_search_results_per_stream: 50
-  require_published_signal: true
-  max_lookback_days: 14
-  default_lookback_days: 7
 
 learning:
   knowledge_transfer_frequency: 10
@@ -65,3 +63,4 @@ agents:
 
   evaluator:
     id: "E1"
+
