feat: Replace SerpAPI with Bocha Search API v0.4.1
- Created search_bocha.py provider with Bocha AI API integration
- Updated llm_prompt_search.py to support both bocha and serpapi providers
- Changed default search_provider from 'serpapi' to 'bocha' in all configs
- Added BOCHA_API_KEY to .env
- Bocha advantages: lower cost, better Chinese/global search, ISO dates

--- a/configs/multi_asset.yaml
+++ b/configs/multi_asset.yaml
@@ -38,7 +38,7 @@ data:
 news:
   use_llm_news: true
   news_query: "crypto OR bitcoin OR ethereum OR solana OR dogecoin OR ripple"
-  search_provider: "serpapi"
+  search_provider: "bocha"  # Options: "bocha" (recommended) or "serpapi"
   llm_model: "gpt-4o-mini"
   max_news_per_stream: 15
   max_search_results_per_stream: 50
