--- a/configs/single/xrp.yaml
+++ b/configs/single/xrp.yaml
@@ -17,7 +17,7 @@ data:
 news:
   use_llm_news: true
   news_query: "ripple OR XRP"
-  search_provider: "serpapi"
+  search_provider: "bocha"
   llm_model: "gpt-4o-mini"
   max_news_per_stream: 10
 
